--- a/street.html
+++ b/street.html
@@ -17,35 +17,124 @@
     <div id="container">
       <pre class="time" id="clock">
 ╔══════════════════╗
-║ Monday │ 7:25 AM ║
+║ Monday │ 7:40 AM ║
 ╚══════════════════╝
       </pre>
-      <pre id="breakfast">
+      <pre id="asciiArt">
+                                                       ~.|~~
+               ____                                     ||
+            .-'    '-.                                  ||
+          .'          '.                _..._           ||
+         /___:______:___\             .'_____`.         ||
+          ||  __   __  ||           .-|---.---|-.       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          ||o|__| |__| ||           `-|___|___|-'       ||
+          ||  __  __   ||       , -. `---------'        ||
+          || |  | |  | ||      ( /  \                   ||
+          || |__| |__| ||      (𐙚)  )                   ||
+         _||___________||_       -'-                    ||
+       _|___|---------|___|_    / | \                   ||
+------|____/-----------\____|-- |_o_| -------------------|----------
+                                 ╱ ╲
+                                .   .
 
-      </pre>
-      <pre id="empty-breakfast" style="display: none;">
-                    _______________
-                   |\ _____________\
-                   | |\_____________.
-                   | |              |
-                   | |              |
-   _______         | |              |
-  |_______|        | |              |
- /\        \       | |    CEREAL    |
-/__\________\      | |              |
-|  |        |      | |              |
-|--|--------|      | |              |
-|  |  MILK  |      | |              |
-|--|--------|       \|_ / __________|
-|  |        |          /
-|  |      .___________/___.
-|__|_______\=============/
-            \           /
-              ---------'
+--------------------------------------------------------------------
       </pre>
     </div>
   </div>
   <script>
+    const asciiArtElement = document.getElementById('asciiArt');
+    let currentFrame = 0;
+
+    function updateAsciiArt() {
+      switch (currentFrame) {
+        case 0:
+          asciiArtElement.textContent = `                                                      ~.|~~
+              ____                                     ||
+           .-'    '-.                                  ||
+         .'          '.                 _..._          ||
+        /___:______:___\\             .'_____\`.         ||
+         ||  __   __  ||           .-|---.---|-.       ||
+         || |  | |  | ||           |=|   |   |=|       ||
+         || |  | |  | ||           |=|   |   |=|       ||
+         || |  | |  | ||           |=|   |   |=|       ||
+         || |  | |  | ||           |=|   |   |=|       ||
+         || |  | |  | ||           |=|   |   |=|       ||
+         ||o|__| |__| ||           \`-|___|___|-'       ||
+         ||  __  __   ||        , -. ---------'        ||
+         || |  | |  | ||       ( /  \\                  ||
+         || |__| |__| ||       (𐙚)  )                  ||
+        _||___________||_        -'-                   ||
+      _|___|---------|___|_     / | \\                  ||
+-----|____/-----------\\____|--- |_o_| ------------------|-----------
+                                  ╳
+                                 . .
+
+--------------------------------------------------------------------
+          `;
+          break;
+
+        case 1:
+          asciiArtElement.textContent = `                                                     ~.|~~
+             ____                                     ||
+          .-'    '-.                                  ||
+        .'          '.                _..._           ||
+       /___:______:___\\             .'_____\`.         ||
+        ||  __   __  ||           .-|---.---|-.       ||
+        || |  | |  | ||           |=|   |   |=|       ||
+        || |  | |  | ||           |=|   |   |=|       ||
+        || |  | |  | ||           |=|   |   |=|       ||
+        || |  | |  | ||           |=|   |   |=|       ||
+        || |  | |  | ||           |=|   |   |=|       ||
+        ||o|__| |__| ||           \`-|___|___|-'       ||
+        ||  __  __   ||         , -. --------'        ||
+        || |  | |  | ||        ( /  \\                 ||
+        || |__| |__| ||        (𐙚)  )                 ||
+       _||___________||_         -'-                  ||
+     _|___|---------|___|_      / | \\                 ||
+----|____/-----------\\____|---- |_o_| -----------------|------------
+                                 ╱ ╲
+                                .   .
+
+--------------------------------------------------------------------
+            `;
+            break;
+            case 2:
+              asciiArtElement.textContent = `                                                    ~.|~~
+            ____                                     ||
+         .-'    '-.                                  ||
+       .'          '.                _..._           ||
+      /___:______:___\\             .'_____\`.         ||
+       ||  __   __  ||           .-|---.---|-.       ||
+       || |  | |  | ||           |=|   |   |=|       ||
+       || |  | |  | ||           |=|   |   |=|       ||
+       || |  | |  | ||           |=|   |   |=|       ||
+       || |  | |  | ||           |=|   |   |=|       ||
+       || |  | |  | ||           |=|   |   |=|       ||
+       ||o|__| |__| ||           \`-|___|___|-'       ||
+       ||  __  __   ||          , -. -------'        ||
+       || |  | |  | ||         ( /  \\                ||
+       || |__| |__| ||         (𐙚)  )                ||
+      _||___________||_          -'-                 ||
+    _|___|---------|___|_       / | \\                ||
+---|____/-----------\\____|----- |_o_| ----------------|-------------
+                                  ╳
+                                 . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+          }
+        // Increment frame and loop back to 0 after the 3rd frame
+        currentFrame = (currentFrame + 1) % 40;
+      }
+
+      // Update the ASCII art every 1 second
+      setInterval(updateAsciiArt, 700);
   </script>
 </body>
 </html>
