--- a/street.html
+++ b/street.html
@@ -68,7 +68,7 @@
          ||  __  __   ||        , -. ---------'        ||
          || |  | |  | ||       ( /  \\                  ||
          || |__| |__| ||       (𐙚)  )                  ||
-        _||___________||_        -'-                   ||
+        _||___________||_        -'-                   ||           ,
       _|___|---------|___|_     / | \\                  ||
 -----|____/-----------\\____|--- |_o_| ------------------|-----------
                                   ╳
@@ -93,9 +93,9 @@
         ||o|__| |__| ||           \`-|___|___|-'       ||
         ||  __  __   ||         , -. --------'        ||
         || |  | |  | ||        ( /  \\                 ||
-        || |__| |__| ||        (𐙚)  )                 ||
-       _||___________||_         -'-                  ||
-     _|___|---------|___|_      / | \\                 ||
+        || |__| |__| ||        (𐙚)  )                 ||            (
+       _||___________||_         -'-                  ||           ,'
+     _|___|---------|___|_      / | \\                 ||           (
 ----|____/-----------\\____|---- |_o_| -----------------|------------
                                  ╱ ╲
                                 .   .
@@ -118,12 +118,212 @@
        ||o|__| |__| ||           \`-|___|___|-'       ||
        ||  __  __   ||          , -. -------'        ||
        || |  | |  | ||         ( /  \\                ||
-       || |__| |__| ||         (𐙚)  )                ||
-      _||___________||_          -'-                 ||
-    _|___|---------|___|_       / | \\                ||
+       || |__| |__| ||         (𐙚)  )                ||            (
+      _||___________||_          -'-                 ||           ,'
+    _|___|---------|___|_       / | \\                ||           (,
 ---|____/-----------\\____|----- |_o_| ----------------|-------------
                                   ╳
                                  . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 3:
+              asciiArtElement.textContent = `                                                   ~.|~~
+           ____                                     ||
+        .-'    '-.                                  ||
+      .'          '.                _..._           ||
+     /___:______:___\\             .'_____\`.         ||
+      ||  __   __  ||           .-|---.---|-.       ||
+      || |  | |  | ||           |=|   |   |=|       ||
+      || |  | |  | ||           |=|   |   |=|       ||
+      || |  | |  | ||           |=|   |   |=|       ||
+      || |  | |  | ||           |=|   |   |=|       ||
+      || |  | |  | ||           |=|   |   |=|       ||
+      ||o|__| |__| ||           \`-|___|___|-'       ||
+      ||  __  __   ||           , -. ------'        ||
+      || |  | |  | ||          ( /  \\               ||             /
+      || |__| |__| ||          (𐙚)  )               ||            (
+     _||___________||_           -'-                ||           ,'
+   _|___|---------|___|_        / | \\               ||           (,,
+--|____/-----------\\____|------ |_o_| ---------------|--------------
+                                 ╱ ╲
+                                .   .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 4:
+              asciiArtElement.textContent = `                                                  ~.|~~
+          ____                                     ||
+       .-'    '-.                                  ||
+     .'          '.                _..._           ||
+    /___:______:___\\             .'_____\`.         ||
+     ||  __   __  ||           .-|---.---|-.       ||
+     || |  | |  | ||           |=|   |   |=|       ||
+     || |  | |  | ||           |=|   |   |=|       ||
+     || |  | |  | ||           |=|   |   |=|       ||
+     || |  | |  | ||           |=|   |   |=|       ||
+     || |  | |  | ||           |=|   |   |=|       ||
+     ||o|__| |__| ||           \`-|___|___|-'       ||
+     ||  __  __   ||            , -. -----'        ||               .
+     || |  | |  | ||           ( /  \\              ||             /
+     || |__| |__| ||           (𐙚)  )              ||            (  )
+    _||___________||_            -'-               ||           ,'  /
+  _|___|---------|___|_         / | \\              ||           (,,)
+-|____/-----------\\____|------- |_o_| --------------|--------------/
+                                  ╳                                 |
+                                 . .                                .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 5:
+              asciiArtElement.textContent = `                                                 ~.|~~
+         ____                                     ||
+      .-'    '-.                                  ||
+    .'          '.                _..._           ||
+   /___:______:___\\             .'_____\`.         ||
+    ||  __   __  ||           .-|---.---|-.       ||
+    || |  | |  | ||           |=|   |   |=|       ||
+    || |  | |  | ||           |=|   |   |=|       ||
+    || |  | |  | ||           |=|   |   |=|       ||
+    || |  | |  | ||           |=|   |   |=|       ||
+    || |  | |  | ||           |=|   |   |=|       ||
+    ||o|__| |__| ||           \`-|___|___|-'       ||
+    ||  __  __   ||             , -. ----'        ||               .
+    || |  | |  | ||            ( /  \\             ||             /
+    || |__| |__| ||            (𐙚)  )             ||            (  )
+   _||___________||_             -'-              ||           ,'  /'
+ _|___|---------|___|_          / | \\             ||           (,,)_
+|____/-----------\\____|-------- |_o_| -------------|--------------/_
+                                 ╱ ╲                               |
+                                .   .                              .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 6:
+              asciiArtElement.textContent = `                                                ~.|~~
+        ____                                     ||
+     .-'    '-.                                  ||
+   .'          '.                _..._           ||
+  /___:______:___\\             .'_____\`.         ||
+   ||  __   __  ||           .-|---.---|-.       ||
+   || |  | |  | ||           |=|   |   |=|       ||
+   || |  | |  | ||           |=|   |   |=|       ||
+   || |  | |  | ||           |=|   |   |=|       ||
+   || |  | |  | ||           |=|   |   |=|       ||
+   || |  | |  | ||           |=|   |   |=|       ||
+   ||o|__| |__| ||           \`-|___|___|-'       ||
+   ||  __  __   ||             \`, -. ---'        ||              . -
+   || |  | |  | ||             ( /  \\            ||             /  /
+   || |__| |__| ||             (𐙚)  )            ||            (  )
+  _||___________||_              -'-             ||           ,'  /'-
+_|___|---------|___|_           / | \\            ||           (,,)_|
+____/-----------\\____|--------- |_o_| ------------|--------------/_o
+                                  ╳                               | |
+                                 . .                              . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 7:
+              asciiArtElement.textContent = `                                               ~.|~~
+       ____                                     ||
+    .-'    '-.                                  ||
+  .'          '.                _..._           ||
+ /___:______:___\\             .'_____\`.         ||
+  ||  __   __  ||           .-|---.---|-.       ||
+  || |  | |  | ||           |=|   |   |=|       ||
+  || |  | |  | ||           |=|   |   |=|       ||
+  || |  | |  | ||           |=|   |   |=|       ||
+  || |  | |  | ||           |=|   |   |=|       ||
+  || |  | |  | ||           |=|   |   |=|       ||
+  ||o|__| |__| ||           \`-|___|___|-'       ||
+  ||  __  __   ||             \`-, -. --'        ||              . -
+  || |  | |  | ||              ( /  \\           ||             /  /
+  || |__| |__| ||              (𐙚)  )           ||            (  )  /
+ _||___________||_               -'-            ||           ,'  /'-.
+|___|---------|___|_            / | \\           ||           (,,)_|_
+___/-----------\\____|---------- |_o_| -----------|--------------/_o_
+                                 ╱ ╲                             | |
+                                .   .                            . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 8:
+              asciiArtElement.textContent = `                                              ~.|~~
+      ____                                     ||
+   .-'    '-.                                  ||
+ .'          '.                _..._           ||
+/___:______:___\\             .'_____\`.         ||
+ ||  __   __  ||           .-|---.---|-.       ||
+ || |  | |  | ||           |=|   |   |=|       ||
+ || |  | |  | ||           |=|   |   |=|       ||
+ || |  | |  | ||           |=|   |   |=|       ||
+ || |  | |  | ||           |=|   |   |=|       ||
+ || |  | |  | ||           |=|   |   |=|       ||
+ ||o|__| |__| ||           \`-|___|___|-'       ||
+ ||  __  __   ||             \`--, -. -'        ||              . - .
+ || |  | |  | ||               ( /  \\          ||             /  / \\
+ || |__| |__| ||               (𐙚)  )          ||            (  )  /
+_||___________||_                -'-           ||           ,'  /'-.
+___|---------|___|_             / | \\          ||           (,,)_|_|
+__/-----------\\____|----------- |_o_| ----------|--------------/_o_\\
+                                  ╳                             | |
+                                 . .                            . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 9:
+              asciiArtElement.textContent = `                                             ~.|~~
+     ____                                     ||
+  .-'    '-.                                  ||
+.'          '.                _..._           ||
+___:______:___\\             .'_____\`.         ||
+||  __   __  ||           .-|---.---|-.       ||
+|| |  | |  | ||           |=|   |   |=|       ||
+|| |  | |  | ||           |=|   |   |=|       ||
+|| |  | |  | ||           |=|   |   |=|       ||
+|| |  | |  | ||           |=|   |   |=|       ||
+|| |  | |  | ||           |=|   |   |=|       ||
+||o|__| |__| ||           \`-|___|___|-'       ||
+||  __  __   ||             \`---, -. '        ||             . - .
+|| |  | |  | ||                ( /  \\         ||            // ^ \\\\
+|| |__| |__| ||                (𐙚)  )         ||           ( \\   / )
+||___________||_                 -'-          ||           / .-'-. \\
+__|---------|___|_              / | \\         ||          ( /|___|\\ )
+_/-----------\\____|------------ |_o_| ---------|------------'/___\\'-
+                                 ╱ ╲                          | |
+                                .   .                         . .
+
+--------------------------------------------------------------------
+                `;
+                break;
+            case 10:
+              asciiArtElement.textContent = `                                            ~.|~~
+    ____                                     ||
+ .-'    '-.                                  ||
+'          '.                _..._           ||
+__:______:___\\             .'_____\`.         ||
+|  __   __  ||           .-|---.---|-.       ||
+| |  | |  | ||           |=|   |   |=|       ||
+| |  | |  | ||           |=|   |   |=|       ||
+| |  | |  | ||           |=|   |   |=|       ||
+| |  | |  | ||           |=|   |   |=|       ||
+| |  | |  | ||           |=|   |   |=|       ||
+|o|__| |__| ||           \`-|___|___|-'       ||
+|  __  __   ||             \`----, -.         ||             . - .
+| |  | |  | ||                 ( /  \\        ||             / \\  \\
+| |__| |__| ||                 (𐙚)  )        ||             \\  (  )
+|___________||_                  -'-         ||             .-'-\\ ',
+_|---------|___|_               / | \\        ||             |_|_(,,)
+/-----------\\____|------------- |_o_| --------|-------------/_o_\\--
+                                 | |                         | |
+                                 . .                         . .
 
 --------------------------------------------------------------------
                 `;
