--- a/street.html
+++ b/street.html
@@ -21,24 +21,24 @@
 ╚══════════════════╝
       </pre>
       <pre id="asciiArt">
-                                                       ~.|~~
-               ____                                     ||
-            .-'    '-.                                  ||
-          .'          '.                _..._           ||
-         /___:______:___\             .'_____`.         ||
-          ||  __   __  ||           .-|---.---|-.       ||
-          || |  | |  | ||           |=|   |   |=|       ||
-          || |  | |  | ||           |=|   |   |=|       ||
-          || |  | |  | ||           |=|   |   |=|       ||
-          || |  | |  | ||           |=|   |   |=|       ||
-          || |  | |  | ||           |=|   |   |=|       ||
-          ||o|__| |__| ||           `-|___|___|-'       ||
-          ||  __  __   ||       , -. `---------'        ||
-          || |  | |  | ||      ( /  \                   ||
-          || |__| |__| ||      (𐙚)  )                   ||
-         _||___________||_       -'-                    ||
-       _|___|---------|___|_    / | \                   ||
-------|____/-----------\____|-- |_o_| -------------------|----------
+                                                           ~.|~~
+                   ____                                     ||
+                .-'    '-.                                  ||
+              .'          '.                _..._           ||
+             /___:______:___\             .'_____`.         ||
+              ||  __   __  ||           .-|---.---|-.       ||
+              || |  | |  | ||           |=|   |   |=|       ||
+              || |  | |  | ||           |=|   |   |=|       ||
+              || |  | |  | ||           |=|   |   |=|       ||
+              || |  | |  | ||           |=|   |   |=|       ||
+              || |  | |  | ||           |=|   |   |=|       ||
+              ||o|__| |__| ||           `-|___|___|-'       ||
+              ||  __  __   ||   , -.     `---------'        ||
+              || |  | |  | ||  ( /  \                       ||
+              || |__| |__| ||  (𐙚)  )                       ||
+             _||___________||_   -'-                        ||
+           _|___|---------|___| / | \                       ||
+----------|____/-----------\___ |_o_| -----------------------|------
                                  ╱ ╲
                                 .   .
 
@@ -53,6 +53,106 @@
     function updateAsciiArt() {
       switch (currentFrame) {
         case 0:
+          asciiArtElement.textContent = `                                                           ~.|~~
+                  ____                                     ||
+               .-'    '-.                                  ||
+             .'          '.                _..._           ||
+            /___:______:___\\             .'_____\`.         ||
+             ||  __   __  ||           .-|---.---|-.       ||
+             || |  | |  | ||           |=|   |   |=|       ||
+             || |  | |  | ||           |=|   |   |=|       ||
+             || |  | |  | ||           |=|   |   |=|       ||
+             || |  | |  | ||           |=|   |   |=|       ||
+             || |  | |  | ||           |=|   |   |=|       ||
+             ||o|__| |__| ||           \`-|___|___|-'       ||
+             ||  __  __   ||    , -.    \`---------'        ||
+             || |  | |  | ||   ( /  \\                      ||
+             || |__| |__| ||   (𐙚)  )                      ||
+            _||___________||_    -'-                       ||
+          _|___|---------|___|_ / | \\                      ||
+---------|____/-----------\\____ |_o_| ----------------------|-------
+                                  ╳
+                                 . .
+
+--------------------------------------------------------------------
+          `;
+          break;
+        case 1:
+          asciiArtElement.textContent = `                                                         ~.|~~
+                 ____                                     ||
+              .-'    '-.                                  ||
+            .'          '.                _..._           ||
+           /___:______:___\\             .'_____\`.         ||
+            ||  __   __  ||           .-|---.---|-.       ||
+            || |  | |  | ||           |=|   |   |=|       ||
+            || |  | |  | ||           |=|   |   |=|       ||
+            || |  | |  | ||           |=|   |   |=|       ||
+            || |  | |  | ||           |=|   |   |=|       ||
+            || |  | |  | ||           |=|   |   |=|       ||
+            ||o|__| |__| ||           \`-|___|___|-'       ||
+            ||  __  __   ||     , -.   \`---------'        ||
+            || |  | |  | ||    ( /  \\                     ||
+            || |__| |__| ||    (𐙚)  )                     ||
+           _||___________||_     -'-                      ||
+         _|___|---------|___|_  / | \\                     ||
+--------|____/-----------\\____| |_o_| ---------------------|--------
+                                 ╱ ╲
+                                .   .
+
+--------------------------------------------------------------------
+          `;
+          break;
+        case 2:
+          asciiArtElement.textContent = `                                                        ~.|~~
+                ____                                     ||
+             .-'    '-.                                  ||
+           .'          '.                _..._           ||
+          /___:______:___\\             .'_____\`.         ||
+           ||  __   __  ||           .-|---.---|-.       ||
+           || |  | |  | ||           |=|   |   |=|       ||
+           || |  | |  | ||           |=|   |   |=|       ||
+           || |  | |  | ||           |=|   |   |=|       ||
+           || |  | |  | ||           |=|   |   |=|       ||
+           || |  | |  | ||           |=|   |   |=|       ||
+           ||o|__| |__| ||           \`-|___|___|-'       ||
+           ||  __  __   ||      , -.  \`---------'        ||
+           || |  | |  | ||     ( /  \\                    ||
+           || |__| |__| ||     (𐙚)  )                    ||
+          _||___________||_      -'-                     ||
+        _|___|---------|___|_   / | \\                    ||
+-------|____/-----------\\____|- |_o_| --------------------|---------
+                                  ╳
+                                 . .
+
+--------------------------------------------------------------------
+          `;
+          break;
+        case 3:
+          asciiArtElement.textContent = `                                                       ~.|~~
+               ____                                     ||
+            .-'    '-.                                  ||
+          .'          '.                _..._           ||
+         /___:______:___\\             .'_____\`.         ||
+          ||  __   __  ||           .-|---.---|-.       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          || |  | |  | ||           |=|   |   |=|       ||
+          ||o|__| |__| ||           \`-|___|___|-'       ||
+          ||  __  __   ||       , -. \`---------'        ||
+          || |  | |  | ||      ( /  \\                   ||
+          || |__| |__| ||      (𐙚)  )                   ||
+         _||___________||_       -'-                    ||
+       _|___|---------|___|_    / | \\                   ||
+------|____/-----------\\____|-- |_o_| -------------------|----------
+                                 ╱ ╲
+                                .   .
+
+--------------------------------------------------------------------
+          `;
+          break;
+        case 4:
           asciiArtElement.textContent = `                                                      ~.|~~
               ____                                     ||
            .-'    '-.                                  ||
@@ -78,7 +178,7 @@
           `;
           break;
 
-        case 1:
+        case 5:
           asciiArtElement.textContent = `                                                     ~.|~~
              ____                                     ||
           .-'    '-.                                  ||
@@ -103,7 +203,7 @@
 --------------------------------------------------------------------
             `;
             break;
-            case 2:
+            case 6:
               asciiArtElement.textContent = `                                                    ~.|~~
             ____                                     ||
          .-'    '-.                                  ||
@@ -128,7 +228,7 @@
 --------------------------------------------------------------------
                 `;
                 break;
-            case 3:
+            case 7:
               asciiArtElement.textContent = `                                                   ~.|~~
            ____                                     ||
         .-'    '-.                                  ||
@@ -153,7 +253,7 @@
 --------------------------------------------------------------------
                 `;
                 break;
-            case 4:
+            case 8:
               asciiArtElement.textContent = `                                                  ~.|~~
           ____                                     ||
        .-'    '-.                                  ||
@@ -178,7 +278,7 @@
 --------------------------------------------------------------------
                 `;
                 break;
-            case 5:
+            case 9:
               asciiArtElement.textContent = `                                                 ~.|~~
          ____                                     ||
       .-'    '-.                                  ||
@@ -203,7 +303,7 @@
 --------------------------------------------------------------------
                 `;
                 break;
-            case 6:
+            case 10:
               asciiArtElement.textContent = `                                                ~.|~~
         ____                                     ||
      .-'    '-.                                  ||
@@ -228,7 +328,7 @@ ____/-----------\\____|--------- |_o_| ------------|--------------/_o
 --------------------------------------------------------------------
                 `;
                 break;
-            case 7:
+            case 11:
               asciiArtElement.textContent = `                                               ~.|~~
        ____                                     ||
     .-'    '-.                                  ||
@@ -253,7 +353,7 @@ ___/-----------\\____|---------- |_o_| -----------|--------------/_o_
 --------------------------------------------------------------------
                 `;
                 break;
-            case 8:
+            case 12:
               asciiArtElement.textContent = `                                              ~.|~~
       ____                                     ||
    .-'    '-.                                  ||
@@ -278,7 +378,7 @@ __/-----------\\____|----------- |_o_| ----------|--------------/_o_\\
 --------------------------------------------------------------------
                 `;
                 break;
-            case 9:
+            case 13:
               asciiArtElement.textContent = `                                             ~.|~~
      ____                                     ||
   .-'    '-.                                  ||
@@ -303,7 +403,7 @@ _/-----------\\____|------------ |_o_| ---------|------------'/___\\'-
 --------------------------------------------------------------------
                 `;
                 break;
-            case 10:
+            case 14:
               asciiArtElement.textContent = `                                            ~.|~~
     ____                                     ||
  .-'    '-.                                  ||
